Bug 1690481 - Make the fetch request fail when response is not available r=baku

Differential Revision: https://phabricator.services.mozilla.com/D103892